feat+refactor: implemented reset fields button into products store and refactor tailwind for secondary button.

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -13,6 +13,7 @@
             @apply flex items-center gap-4;
 
         }
+
         .content {
             @apply bg-white overflow-hidden shadow-sm sm:rounded-lg;
         }
@@ -53,6 +54,12 @@
             @apply inline-flex items-center px-4 py-2 bg-green-600 border border-transparent rounded-md font-semibold
             text-xs text-white uppercase tracking-widest hover:bg-green-700 focus:bg-green-700 active:bg-green-900
             focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition ease-in-out duration-150;
+        }
+
+        &-secondary {
+            @apply inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md font-semibold text-xs
+            text-gray-700 uppercase tracking-widest shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2
+            focus:ring-indigo-500 focus:ring-offset-2 disabled:opacity-25 transition ease-in-out duration-150;
         }
     }
 
