refactor: danger button then added to clear fields instead secondary button.

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -11,7 +11,6 @@
         @apply max-w-7xl mx-auto sm:px-6 lg:px-8;
         &-buttons {
             @apply flex items-center gap-4;
-
         }
 
         .content {
@@ -60,6 +59,12 @@
             @apply inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md font-semibold text-xs
             text-gray-700 uppercase tracking-widest shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2
             focus:ring-indigo-500 focus:ring-offset-2 disabled:opacity-25 transition ease-in-out duration-150;
+        }
+
+        &-danger {
+            @apply inline-flex items-center px-4 py-2 bg-red-600 border border-transparent rounded-md font-semibold
+            text-xs text-white uppercase tracking-widest hover:bg-red-500 active:bg-red-700 focus:outline-none
+            focus:ring-2 focus:ring-red-500 focus:ring-offset-2 transition ease-in-out duration-150;
         }
     }
 
