--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -46,6 +46,12 @@
 
     .input {
         @apply focus:border-indigo-500 focus:ring-indigo-500 rounded-md shadow-sm mt-1 block w-full border-gray-300;
+
+        &.select {
+            option {
+                @apply text-gray-700;
+            }
+        }
     }
 
     .button {
