--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -13,8 +13,10 @@
             @apply flex items-center gap-4;
         }
 
+
+
         .content {
-            @apply bg-white overflow-hidden shadow-sm sm:rounded-lg;
+            @apply p-4 sm:p-8 bg-white shadow sm:rounded-lg;
         }
     }
 
@@ -75,7 +77,7 @@
     }
 
     .transition {
-        &-defaultt {
+        &-default {
             @apply transition duration-700 ease-in-out;
         }
     }
