--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+.bg-dots {
+    &--darker {
+        background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.22676 0C1.91374 0 2.45351 0.539773 2.45351 1.22676C2.45351 1.91374 1.91374 2.45351 1.22676 2.45351C0.539773 2.45351 0 1.91374 0 1.22676C0 0.539773 0.539773 0 1.22676 0Z' fill='rgba(0,0,0,0.07)'/%3E%3C/svg%3E");
+    }
+
+    @media (prefers-color-scheme: dark) {
+        .dark\:bg-dots--lighter {
+            background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.22676 0C1.91374 0 2.45351 0.539773 2.45351 1.22676C2.45351 1.91374 1.91374 2.45351 1.22676 2.45351C0.539773 2.45351 0 1.91374 0 1.22676C0 0.539773 0.539773 0 1.22676 0Z' fill='rgba(255,255,255,0.07)'/%3E%3C/svg%3E");
+        }
+    }
+}
+
 @layer components {
     .wrapper {
         @apply py-12;
@@ -9,16 +21,65 @@
 
     .container {
         @apply max-w-7xl mx-auto sm:px-6 lg:px-8;
-        &-buttons {
+        &__buttons {
             @apply flex items-center gap-4;
         }
-
 
 
         .content {
             @apply p-4 sm:p-8 bg-white shadow sm:rounded-lg;
         }
     }
+
+    .page {
+        @apply relative sm:flex sm:justify-center sm:items-center min-h-screen bg-dots--darker bg-center bg-gray-100
+        dark:bg-dots--lighter dark:bg-gray-900 selection:bg-red-500 selection:text-white;
+
+        &__menu {
+            @apply sm:fixed sm:top-0 sm:right-0 p-6 text-right;
+        }
+
+        &__link {
+            @apply font-semibold text-gray-600 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white
+            focus:outline focus:outline-2 focus:rounded-sm focus:outline-red-500''
+        }
+
+        &__wrapper {
+            @apply mt-5 grid grid-cols-1 w-full;
+        }
+
+        &__container {
+            @apply max-w-7xl mx-auto p-6 lg:p-8 w-full;
+        }
+
+        &__content {
+            @apply max-w-full p-6 bg-white dark:bg-gray-800/50 dark:bg-gradient-to-bl
+            from-gray-700/50 dark:ring-1 dark:ring-inset dark:ring-white/5 rounded-lg shadow-2xl
+            shadow-gray-500/20 dark:shadow-none flex z-10;
+        }
+    }
+
+    .page-footer {
+        @apply flex justify-center mt-5 px-6 sm:items-center sm:justify-between;
+
+        &__wrapper {
+            @apply text-center text-sm text-gray-500 dark:text-gray-400 sm:text-left;
+        }
+
+        &__container {
+            @apply flex items-center gap-4;
+        }
+
+        &__link {
+            @apply inline-flex items-center hover:text-gray-700 dark:hover:text-white focus:outline
+            focus:outline-2 focus:rounded-sm focus:outline-red-500;
+        }
+
+        &__text {
+            @apply ml-4 text-center text-sm text-gray-500 dark:text-gray-400 sm:text-right sm:ml-0;
+        }
+    }
+
 
     .form {
         @apply mt-6 space-y-6;
@@ -33,15 +94,15 @@
     }
 
     .p {
-        &-small {
+        &--small {
             @apply mt-1 text-sm text-gray-600;
         }
 
-        &-error {
+        &--error {
             @apply text-sm text-red-600 mt-2;
         }
 
-        &-success {
+        &--success {
             @apply text-sm text-green-700;
         }
     }
@@ -57,19 +118,19 @@
     }
 
     .button {
-        &-primary {
+        &--primary {
             @apply inline-flex items-center px-4 py-2 bg-green-600 border border-transparent rounded-md font-semibold
             text-xs text-white uppercase tracking-widest hover:bg-green-700 focus:bg-green-700 active:bg-green-900
             focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition ease-in-out duration-150;
         }
 
-        &-secondary {
+        &--secondary {
             @apply inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md font-semibold text-xs
             text-gray-700 uppercase tracking-widest shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2
             focus:ring-indigo-500 focus:ring-offset-2 disabled:opacity-25 transition ease-in-out duration-150;
         }
 
-        &-danger {
+        &--danger {
             @apply inline-flex items-center px-4 py-2 bg-red-600 border border-transparent rounded-md font-semibold
             text-xs text-white uppercase tracking-widest hover:bg-red-500 active:bg-red-700 focus:outline-none
             focus:ring-2 focus:ring-red-500 focus:ring-offset-2 transition ease-in-out duration-150;
@@ -77,7 +138,7 @@
     }
 
     .transition {
-        &-default {
+        &--default {
             @apply transition duration-700 ease-in-out;
         }
     }
