--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -36,12 +36,12 @@
         dark:bg-dots--lighter dark:bg-gray-900 selection:bg-red-500 selection:text-white;
 
         &__menu {
-            @apply sm:fixed sm:top-0 sm:right-0 p-6 text-right;
+            @apply sm:fixed sm:top-0 sm:right-0 p-6 text-right flex gap-x-4;
         }
 
-        &__link {
+        &__menu__link {
             @apply font-semibold text-gray-600 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white
-            focus:outline focus:outline-2 focus:rounded-sm focus:outline-red-500''
+            focus:outline focus:outline-2 focus:rounded-sm focus:outline-red-500;
         }
 
         &__wrapper {
