--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -107,6 +107,11 @@
         }
     }
 
+    a {
+        @apply underline text-sm text-gray-600 hover:text-gray-900 rounded-md focus:outline-none focus:ring-2
+        focus:ring-offset-2 focus:ring-indigo-500;
+    }
+
     .input {
         @apply focus:border-indigo-500 focus:ring-indigo-500 rounded-md shadow-sm mt-1 block w-full border-gray-300;
 
